# docs/swagger.yaml
@@ -10,6 +10,94 @@ paths:
             type: string
       tags:
       - GetIndex
+  /user/CreateUser:
+    get:
+      parameters:
+      - description: 用户名
+        in: query
+        name: name
+        type: string
+      - description: 密码
+        in: query
+        name: password
+        type: string
+      - description: 确认密码
+        in: query
+        name: repassword
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: 新增用户
+      tags:
+      - 用户模块
+  /user/DeleteUser:
+    get:
+      parameters:
+      - description: id
+        in: query
+        name: id
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: 删除用户
+      tags:
+      - 用户模块
+  /user/FindUserByNameAndPwd:
+    post:
+      parameters:
+      - description: name
+        in: formData
+        name: name
+        type: string
+      - description: password
+        in: formData
+        name: password
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: 用户登录
+      tags:
+      - 用户模块
+  /user/UpdateUser:
+    post:
+      parameters:
+      - description: id
+        in: formData
+        name: id
+        type: string
+      - description: name
+        in: formData
+        name: name
+        type: string
+      - description: password
+        in: formData
+        name: password
+        type: string
+      - description: phone
+        in: formData
+        name: phone
+        type: string
+      - description: email
+        in: formData
+        name: email
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: 修改用户
+      tags:
+      - 用户模块
   /user/getUserList:
     get:
       responses:
@@ -17,6 +105,7 @@ paths:
           description: OK
           schema:
             type: string
+      summary: 所有用户
       tags:
-      - 获取用户列表
+      - 用户模块
 swagger: "2.0"
