# service/userService.go
@@ -2,17 +2,147 @@ package service
 
 import (
 	"chat/models"
+	"chat/utils"
+	"fmt"
+	"github.com/asaskevich/govalidator"
 	"github.com/gin-gonic/gin"
+	"math/rand"
+	"net/http"
+	"strconv"
 )
 
 //GetUserList
-// @Tags 获取用户列表
+//@Summary 所有用户
+// @Tags 用户模块
 // @Success 200 {string} data
 // @Router /user/getUserList [get]
 func GetUserList(c *gin.Context) {
 	data := make([]*models.UserBasic, 10)
 	data = models.GetUserList()
 	c.JSON(200, gin.H{
+		"message": data,
+	})
+}
+
+//CreateUser
+//@Summary 新增用户
+// @Tags 用户模块
+// @param name query string false "用户名"
+// @param password query string false "密码"
+// @param repassword query string false "确认密码"
+// @Success 200 {string} data
+// @Router /user/CreateUser [get]
+func CreateUser(c *gin.Context) {
+	user := models.UserBasic{}
+	user.Name = c.Query("name")
+	password := c.Query("password")
+	repassword := c.Query("repassword")
+
+	salt := fmt.Sprintf("%06d", rand.Int31())
+
+	data := models.FindUserByName(user.Name)
+	if data.Name != "" {
+		c.JSON(-1, gin.H{
+			"message": "用户已被注册",
+		})
+		return
+	}
+
+	if password != repassword {
+		c.JSON(-1, gin.H{
+			"message": "两次密码不一致",
+		})
+		return
+	}
+	//user.PassWord = password
+	user.PassWord = utils.MakePassword(password, salt)
+	user.Salt = salt
+	models.CreateUser(user)
+	c.JSON(http.StatusOK, gin.H{
+		"message": "新增用户成功",
+	})
+}
+
+//DeleteUser
+//@Summary 删除用户
+// @Tags 用户模块
+// @param id query string false "id"
+// @Success 200 {string} data
+// @Router /user/DeleteUser [get]
+func DeleteUser(c *gin.Context) {
+	user := models.UserBasic{}
+	id, _ := strconv.Atoi(c.Query("id"))
+	user.ID = uint(id)
+	models.DeleteUser(user)
+
+	c.JSON(http.StatusOK, gin.H{
+		"message": "用户删除成功",
+	})
+}
+
+//UpdateUser
+//@Summary 修改用户
+// @Tags 用户模块
+// @param id formData string false "id"
+// @param name formData string false "name"
+// @param password formData string false "password"
+// @param phone formData string false "phone"
+// @param email formData string false "email"
+// @Success 200 {string} data
+// @Router /user/UpdateUser [post]
+func UpdateUser(c *gin.Context) {
+	user := models.UserBasic{}
+	id, _ := strconv.Atoi(c.PostForm("id"))
+	user.ID = uint(id)
+	user.Name = c.PostForm("name")
+	user.PassWord = c.PostForm("password")
+	user.Phone = c.PostForm("phone")
+	user.Email = c.PostForm("email")
+	_, err := govalidator.ValidateStruct(user)
+	if err != nil {
+		fmt.Println(err)
+		c.JSON(http.StatusOK, gin.H{
+			"message": "修改参数不匹配",
+		})
+		return
+	} else {
+		models.UpdateUser(user)
+
+		c.JSON(http.StatusOK, gin.H{
+			"message": "用户修改成功",
+		})
+	}
+}
+
+//FindUserByNameAndPwd
+//@Summary 用户登录
+// @Tags 用户模块
+// @param name formData string false "name"
+// @param password formData string false "password"
+// @Success 200 {string} data
+// @Router /user/FindUserByNameAndPwd [post]
+func FindUserByNameAndPwd(c *gin.Context) {
+	data := models.UserBasic{}
+	name := c.Query("name")
+	passWord := c.Query("password")
+	user := models.FindUserByName(name)
+	if user.Name == "" {
+		c.JSON(http.StatusOK, gin.H{
+			"message": "该用户不存在",
+		})
+		return
+	}
+	flag := utils.ValidPassword(passWord, user.Salt, user.PassWord)
+	if !flag {
+		c.JSON(http.StatusOK, gin.H{
+			"message": "密码不正确",
+		})
+		return
+	}
+	pwd := utils.MakePassword(passWord, user.Salt)
+	data = models.FindUserByNameAndPwd(name, pwd)
+
+	c.JSON(http.StatusOK, gin.H{
 		"message": data,
 	})
 }
